# OfficeCLI

./: 2025210093017_67806.xlsx  README.md  README_ja.md  README_ko.md  README_zh.md  SKILL.md  deck.pptx  install.ps1  install.sh  我的测试操作.md
.github/workflows/: build.yml  sdk-smoke.yml
examples/: README.md
examples/excel/: cell-formatting.py  cell-formatting.sh  cell-formatting.xlsx  charts.md  charts.py  charts.sh  charts.xlsx  conditional-formatting.sh  data-validation.md  data-validation.py  data-validation.sh  data-validation.xlsx  pivot-tables.py  pivot-tables.sh  pivot-tables.xlsx  sheet-settings.md  sheet-settings.py  sheet-settings.sh  sheet-settings.xlsx  slicers.md  slicers.py  slicers.sh  slicers.xlsx  sparklines.md  sparklines.py  sparklines.sh  sparklines.xlsx  workbook-settings.sh
examples/ppt/: 3d-model.py  3d-model.sh  animations.md  animations.pptx  animations.py  animations.sh  presentation-settings.sh  presentation.pptx  presentation.py  presentation.sh  video.pptx  video.py  video.sh
examples/word/: charts.docx  charts.md  charts.py  charts.sh  content-controls.docx  content-controls.md  content-controls.py  content-controls.sh  document-formatting.sh  fields.docx  fields.md  fields.py  fields.sh  formulas.docx  formulas.md  formulas.py  formulas.sh  numbering.docx  numbering.py  numbering.sh  paragraph-formatting.docx  paragraph-formatting.md  paragraph-formatting.py  paragraph-formatting.sh  paragraph-showcase.docx  paragraph-showcase.md  paragraph-showcase.sh  pictures.docx  pictures.md  pictures.py  pictures.sh  revisions.docx  revisions.md  revisions.py  (+21 more)
sdk/python/: pyproject.toml
(+456 files in other folders)
